--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,10 +1,20 @@
-[Ufm_Frente_de_caixa.pas]
-SaveTime=25/06/2025 22:06:24
+[Ufrm_cadastro_funcionario.pas]
+SaveTime=09/07/2025 20:11:06
 FileCount=2
-File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufm_Frente_de_caixa.pas
-File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufm_Frente_de_caixa.dfm
-[Ufm_cadastro_produto.pas]
-SaveTime=25/06/2025 22:06:24
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_funcionario.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_funcionario.dfm
+[Ufrm_cadastro_pagamento.pas]
+SaveTime=09/07/2025 20:11:06
 FileCount=2
-File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufm_cadastro_produto.pas
-File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufm_cadastro_produto.dfm
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_pagamento.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_pagamento.dfm
+[UDataModule.pas]
+SaveTime=09/07/2025 20:11:06
+FileCount=2
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\UDataModule.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\UDataModule.dfm
+[Ufrm_cadastro_produto.pas]
+SaveTime=09/07/2025 20:11:06
+FileCount=2
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_produto.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_produto.dfm
