--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,5 +1,10 @@
 [Ufrm_cadastro_pagamento.pas]
-SaveTime=11/07/2025 11:51:43
+SaveTime=11/07/2025 12:01:43
 FileCount=2
 File0=C:\Users\Nerus-PC\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_cadastro_pagamento.pas
 File1=C:\Users\Nerus-PC\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_cadastro_pagamento.dfm
+[Ufrm_Frente_de_caixa.pas]
+SaveTime=11/07/2025 12:01:43
+FileCount=2
+File0=C:\Users\Nerus-PC\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.pas
+File1=C:\Users\Nerus-PC\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.dfm
