--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -3,3 +3,13 @@ SaveTime=09/07/2025 22:01:06
 FileCount=2
 File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\UDataModule.pas
 File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\UDataModule.dfm
+[Ufrm_Frente_de_caixa.pas]
+SaveTime=11/07/2025 19:22:11
+FileCount=2
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.dfm
+[Ufrm_cadastro_produto.pas]
+SaveTime=11/07/2025 19:22:11
+FileCount=2
+File0=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_produto.pas
+File1=C:\Users\estudante\Documents\delphi\App_Aula_Busca_Banco\TrabalhoFinalDelphi\Ufrm_cadastro_produto.dfm
