--- a/__recovery/__recovery.ini
+++ b/__recovery/__recovery.ini
@@ -1,10 +1,15 @@
 [UDataModule.pas]
-SaveTime=16/07/2025 18:32:54
+SaveTime=16/07/2025 18:42:54
 FileCount=2
 File0=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\UDataModule.pas
 File1=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\UDataModule.dfm
 [Ufrm_Frente_de_caixa.pas]
-SaveTime=16/07/2025 18:32:54
+SaveTime=16/07/2025 18:42:54
 FileCount=2
 File0=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.pas
 File1=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_Frente_de_caixa.dfm
+[Ufrm_relatorio.pas]
+SaveTime=16/07/2025 18:42:54
+FileCount=2
+File0=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_relatorio.pas
+File1=C:\Users\NTC_ SOLUTIO GÁS\Documents\GitHub\TrabalhoFinalDelphi\Ufrm_relatorio.dfm
